feat(sync-server): add dist keyring scripts + improve CLI help
- Add :dist scripts to run compiled dist/keyring-cli.js in prod/built environments
- Make keyring CLI show usage when --help/-h is provided after subcommands
- Add validate unit test and document running dist/keyring-cli.js directly

--- a/services/sync-server/package.json
+++ b/services/sync-server/package.json
@@ -11,7 +11,10 @@
     "test": "node scripts/node-with-tsx.mjs --test test/*.test.ts",
     "keyring:generate": "node scripts/node-with-tsx.mjs src/keyring-cli.ts generate",
     "keyring:rotate": "node scripts/node-with-tsx.mjs src/keyring-cli.ts rotate",
-    "keyring:validate": "node scripts/node-with-tsx.mjs src/keyring-cli.ts validate"
+    "keyring:validate": "node scripts/node-with-tsx.mjs src/keyring-cli.ts validate",
+    "keyring:generate:dist": "node dist/keyring-cli.js generate",
+    "keyring:rotate:dist": "node dist/keyring-cli.js rotate",
+    "keyring:validate:dist": "node dist/keyring-cli.js validate"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
