--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -12,7 +12,7 @@ regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 formula-format = { path = "../formula-format" }
 thiserror = "2.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 ordered-float = "4"
 uuid = { version = "1", features = ["v4"] }
 unicode-normalization = "0.1"
