feat(collab-session): add collab undo + formula conflict monitoring
- Add @formula/collab-undo and @formula/collab-conflicts workspace packages\n- Wire optional undo + formulaConflicts options into CollabSession\n  - expose session.undo/origin/localOrigins and formulaConflictMonitor\n  - run cell edits in local-origin transactions for Yjs UndoManager isolation\n  - route setCellFormula through FormulaConflictMonitor for conflict detection\n- Add node:test coverage for undo-only-local and conflict monitor wiring\n- Align macro recorder tests with DocumentController '='-prefixed formula invariant

--- a/packages/collab/session/package.json
+++ b/packages/collab/session/package.json
@@ -6,7 +6,9 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "dependencies": {
+    "@formula/collab-conflicts": "workspace:*",
     "@formula/collab-presence": "workspace:*",
+    "@formula/collab-undo": "workspace:*",
     "y-websocket": "^2.1.0",
     "yjs": "^13.6.27"
   },
