--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "esbuild": "^0.27.2",
     "fake-indexeddb": "^6.2.5",
     "jsdom": "^24.0.0",
+    "pg-mem": "^3.0.5",
     "typescript": "^5.8.2",
     "vitest": "^3.0.7"
   },
