--- a/crates/formula-storage/Cargo.toml
+++ b/crates/formula-storage/Cargo.toml
@@ -12,6 +12,7 @@ uuid = { version = "1", features = ["v4", "serde"] }
 tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
 lru = "0.12"
 formula-model = { path = "../formula-model" }
+unicode-normalization = "0.1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt", "time"] }
