feat(collab): add workbook metadata CRDT schema + undo/persistence tests

--- a/packages/collab/session/package.json
+++ b/packages/collab/session/package.json
@@ -9,6 +9,7 @@
     "@formula/collab-conflicts": "workspace:*",
     "@formula/collab-presence": "workspace:*",
     "@formula/collab-undo": "workspace:*",
+    "@formula/collab-workbook": "workspace:*",
     "y-websocket": "^2.1.0",
     "yjs": "^13.6.27"
   },
