feat(collab): offline-first CollabSession persistence (IndexedDB + file)
- Add @formula/collab-persistence with IndexedDB (y-indexeddb) + file update-log persistence

- Load persisted Yjs state before connecting y-websocket; expose whenLocalPersistenceLoaded/flushLocalPersistence

- Share file record framing/encryption helpers with sync-server persistence

- Make sync-server file persistence load plaintext state synchronously to avoid initial-sync races

- Fix SheetManager.moveSheet to clone sheets before reinserting (Yjs integration invariant)

- Add restart + offline merge tests; run sync-server tests serially for reliability

--- a/packages/collab/session/package.json
+++ b/packages/collab/session/package.json
@@ -9,6 +9,7 @@
     "@formula/collab-offline": "workspace:*",
     "@formula/collab-conflicts": "workspace:*",
     "@formula/collab-encryption": "workspace:*",
+    "@formula/collab-persistence": "workspace:*",
     "@formula/collab-presence": "workspace:*",
     "@formula/collab-undo": "workspace:*",
     "@formula/collab-workbook": "workspace:*",
