feat(collab): add per-cell E2E encryption for Yjs cell data
- Add new @formula/collab-encryption package with AES-256-GCM helpers
  (WebCrypto in browser, node:crypto in Node) and AAD binding to
  {docId, sheetId, row, col}.
- Extend CollabSession with optional encryption config (keyForCell /
  shouldEncryptCell) and store encrypted payloads under cell['enc'] while
  clearing plaintext value/formula fields.
- Decrypt on read when a key is available; otherwise return masked
  content (value="###", formula=null) with encrypted=true.
- Add unit + sync-server persistence tests proving unauthorized clients
  (and persisted docs) cannot recover plaintext.

Note: CollabSession getCell/setCellValue/setCellFormula/safeSet* are now
async to support WebCrypto-backed encryption.

--- a/packages/collab/session/package.json
+++ b/packages/collab/session/package.json
@@ -7,6 +7,7 @@
   "types": "src/index.ts",
   "dependencies": {
     "@formula/collab-conflicts": "workspace:*",
+    "@formula/collab-encryption": "workspace:*",
     "@formula/collab-presence": "workspace:*",
     "@formula/collab-undo": "workspace:*",
     "@formula/collab-workbook": "workspace:*",
