feat: implement runtime data connectors API
- Add formula.dataConnectors.register in extension-api (types + runtime)\n- Wire host RPC endpoints + invokeDataConnector with onDataConnector activation + timeouts\n- Add node/browser host tests, docs updates, and a sample-hello demo connector\n- Allow the Node VM sandbox to load extension-api internal runtime modules (./src/runtime.js)

--- a/extensions/sample-hello/package.json
+++ b/extensions/sample-hello/package.json
@@ -18,7 +18,8 @@
     "onCommand:sampleHello.copySumToClipboard",
     "onCommand:sampleHello.showGreeting",
     "onView:sampleHello.panel",
-    "onCustomFunction:SAMPLEHELLO_DOUBLE"
+    "onCustomFunction:SAMPLEHELLO_DOUBLE",
+    "onDataConnector:sampleHello.connector"
   ],
   "contributes": {
     "commands": [
@@ -78,6 +79,12 @@
         "result": {
           "type": "number"
         }
+      }
+    ],
+    "dataConnectors": [
+      {
+        "id": "sampleHello.connector",
+        "name": "Sample Hello Connector"
       }
     ]
   },
