feat: add esbuild-based Formula extension builder
- Add tools/extension-builder CLI (build/check) to emit Node CJS + browser ESM bundles
- Enforce sandbox import policy (no builtins/remote imports) + scan output for dynamic import/eval
- Update sample-hello to build via the new builder and regenerate dist outputs
- Document recommended build/pack/publish workflow and add root extension:build/extension:check scripts
- Teach node test runner to detect require() external deps when node_modules is missing

--- a/extensions/sample-hello/package.json
+++ b/extensions/sample-hello/package.json
@@ -98,7 +98,7 @@
     "storage"
   ],
   "scripts": {
-    "build": "node build.js",
-    "build:check": "node build.js --check"
+    "build": "node ../../tools/extension-builder/src/cli.js build .",
+    "build:check": "node ../../tools/extension-builder/src/cli.js check ."
   }
 }
