--- a/crates/formula-wasm/Cargo.toml
+++ b/crates/formula-wasm/Cargo.toml
@@ -8,10 +8,12 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 formula-core = { path = "../formula-core" }
+roxmltree = "0.20"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1"
 wasm-bindgen = "0.2"
+zip = { version = "2.1", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
