--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
       COOKIE_SECURE: "false"
       SYNC_TOKEN_SECRET: ${SYNC_TOKEN_SECRET:-dev-sync-token-secret-change-me}
       SYNC_TOKEN_TTL_SECONDS: "300"
+      # Used to encrypt values in the database-backed secret store (`secrets` table),
+      # e.g. OIDC client secrets and SIEM auth configuration.
+      SECRET_STORE_KEY: ${SECRET_STORE_KEY:-dev-secret-store-key-change-me}
       # Set to "0" to disable background retention sweeps.
       RETENTION_SWEEP_INTERVAL_MS: "3600000"
     ports:
