--- a/crates/formula-storage/Cargo.toml
+++ b/crates/formula-storage/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
+rusqlite = { version = "0.31", features = ["backup", "bundled", "serde_json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
@@ -13,6 +13,10 @@ tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
 lru = "0.12"
 formula-model = { path = "../formula-model" }
 unicode-normalization = "0.1"
+aes-gcm = "0.10"
+base64 = "0.22"
+rand = "0.8"
+tempfile = "3"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt", "time"] }
