feat(collab): add restart-safe offline persistence with IndexedDB + file log
- Add @formula/collab-offline with attachOfflinePersistence (IndexedDB via y-indexeddb, Node file update log)
- Integrate offline loading into CollabSession (delay websocket connect until offline loaded, expose session.offline)
- Add node:test coverage for IndexedDB restore + sync-server offline restart/merge
- Fix CollabSession.connect binding + a block-scope redeclaration that prevented module parsing

--- a/packages/collab/session/package.json
+++ b/packages/collab/session/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "dependencies": {
+    "@formula/collab-offline": "workspace:*",
     "@formula/collab-conflicts": "workspace:*",
     "@formula/collab-encryption": "workspace:*",
     "@formula/collab-presence": "workspace:*",
