--- a/services/api/package.json
+++ b/services/api/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.12.0",
     "pino": "^9.5.0",
     "prom-client": "^15.1.3",
+    "undici": "^6.21.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
