--- a/crates/formula-vba/Cargo.toml
+++ b/crates/formula-vba/Cargo.toml
@@ -9,5 +9,13 @@ encoding_rs = "0.8"
 thiserror = "1"
 x509-parser = "0.17"
 
+[target.'cfg(all(not(target_arch = "wasm32"), windows))'.dependencies]
+# Use a vendored OpenSSL build on Windows to avoid requiring developers/CI to have
+# OpenSSL installed system-wide.
+openssl = { version = "0.10", features = ["vendored"] }
+
+[target.'cfg(all(not(target_arch = "wasm32"), not(windows)))'.dependencies]
+openssl = "0.10"
+
 [dev-dependencies]
 zip = { version = "2.1", default-features = false, features = ["deflate"] }
