--- a/packages/collab/offline/package.json
+++ b/packages/collab/offline/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "y-indexeddb": "^9.0.12",
     "yjs": "^13.6.27"
+  },
+  "devDependencies": {
+    "@formula/collab-workbook": "workspace:*"
   }
 }
-
