--- a/crates/formula-model/Cargo.toml
+++ b/crates/formula-model/Cargo.toml
@@ -14,7 +14,7 @@ formula-format = { path = "../formula-format" }
 thiserror = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 ordered-float = "4"
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1" }
 unicode-normalization = "0.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -22,6 +22,12 @@ unicode-normalization = "0.1"
 uuid = { version = "1", features = ["rng-getrandom"] }
 # `uuid` + other deps pull `getrandom` which needs opting into a WASM backend.
 getrandom = { version = "0.3", features = ["wasm_js"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+# Random UUID generation relies on OS entropy sources that are not available on
+# `wasm32-unknown-unknown` without JS glue. Keep v4 generation for native
+# targets, but build without it for wasm (see `formula-model/src/lib.rs`).
+uuid = { version = "1", features = ["v4"] }
 
 [dev-dependencies]
 serde_json = "1.0"
