feat(desktop): persist workbooks via formula-storage autosave
- Introduce PersistentWorkbookState (Storage + MemoryManager + AutoSaveManager) in AppState\n- Import opened/new workbooks into SQLite autosave DB and recover from existing DB state\n- Route cell reads/writes through the storage-backed cache while keeping the Tauri command API stable\n- Save/export by exporting formula-model from SQLite and writing a fresh XLSX, then reapplying preserved parts\n- Normalize formula text between UI display (=SUM...) and model/storage canonical (SUM...)\n- Add integration test covering autosave flush, recovery, and export round-trip

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ formula-columnar = { path = "../../../crates/formula-columnar" }
 formula-engine = { path = "../../../crates/formula-engine" }
 formula-format = { path = "../../../crates/formula-format" }
 formula-model = { path = "../../../crates/formula-model" }
+formula-storage = { path = "../../../crates/formula-storage" }
 formula-vba = { path = "../../../crates/formula-vba" }
 formula-vba-runtime = { path = "../../../crates/formula-vba-runtime" }
 formula-xlsb = { path = "../../../crates/formula-xlsb" }
@@ -41,6 +42,8 @@ formula-xlsx = { path = "../../../crates/formula-xlsx" }
 rust_xlsxwriter = "0.79"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
+uuid = { version = "1.8", features = ["v4"] }
 keyring = "3.6"
 rand_core = "0.6"
 sha2 = "0.10"
