feat(storage): persist DAX data model (Power Pivot) in SQLite
- Add SQLite schema migration for data model tables/columns/chunks, relationships, measures, and calculated columns
- Store formula-columnar encoded chunks + per-column string dictionaries as versioned blobs
- Add Storage APIs to save/load full models, load schema-only, and stream column chunks
- Extend formula-dax and formula-columnar with minimal persistence/introspection helpers
- Add integration tests for round-trip correctness and schema-only vs full load timing

--- a/crates/formula-storage/Cargo.toml
+++ b/crates/formula-storage/Cargo.toml
@@ -12,6 +12,8 @@ uuid = { version = "1", features = ["v4", "serde"] }
 tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
 lru = "0.12"
 formula-model = { path = "../formula-model" }
+formula-dax = { path = "../formula-dax" }
+formula-columnar = { path = "../formula-columnar" }
 unicode-normalization = "0.1"
 aes-gcm = "0.10"
 base64 = "0.22"
