--- a/crates/formula-wasm/Cargo.toml
+++ b/crates/formula-wasm/Cargo.toml
@@ -11,6 +11,7 @@ formula-core = { path = "../formula-core" }
 formula-engine = { path = "../formula-engine" }
 formula-model = { path = "../formula-model" }
 formula-xlsx = { path = "../formula-xlsx" }
+js-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 serde_json = "1"
