feat(api): add versioned secret store keys with AAD + rotation tooling
- Introduce SecretStoreKeyring loaded from SECRET_STORE_KEYS_JSON (with legacy SECRET_STORE_KEY support)

- Encrypt new secrets as v2:<keyId>:... and bind ciphertext to secret name via AES-GCM AAD

- Keep compatibility with legacy v1 secrets and add helpers to list/delete secrets

- Add secrets:rotate script to re-encrypt stored secrets to the current key (pg-mem test coverage)

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -10,6 +10,7 @@
     "migrate": "tsx src/scripts/migrate.ts",
     "retention:sweep": "tsx src/scripts/retention.ts",
     "keys:rotate": "tsx src/scripts/rotateKeys.ts",
+    "secrets:rotate": "tsx src/scripts/secretsRotate.ts",
     "versions:encrypt": "tsx src/scripts/encryptDocumentVersions.ts",
     "test": "vitest run",
     "test:watch": "vitest"
