chore(formula-engine): make wasm32 all-targets check pass
- Move criterion/proptest/rand dev-deps to non-wasm targets
- Stub the pipeline benchmark on wasm32
- Skip proptest-based integration test on wasm32

--- a/crates/formula-engine/Cargo.toml
+++ b/crates/formula-engine/Cargo.toml
@@ -37,6 +37,8 @@ getrandom = { version = "0.3", features = ["wasm_js"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
 proptest = "1"
 rand = "0.8"
