ci: run wasm formula-engine check with --all-targets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
           targets: wasm32-unknown-unknown
 
       - name: Check formula-engine builds for wasm32
-        run: cargo check -p formula-engine --target wasm32-unknown-unknown
+        run: cargo check -p formula-engine --target wasm32-unknown-unknown --all-targets
 
       - name: Install wasm-pack
         run: cargo install wasm-pack --locked
