feat(formula-xlsx): reuse built-in numFmtIds for common format codes
- Add formula-format dependency so XLSX writer can recognize built-in format codes
- Expand builtin_num_fmt_id_for_code to map any canonical built-in code (0–49) back to its id
- Keep alias for simplified currency '0,##0.00' → id 7
- Add test ensuring writing '0' uses numFmtId=1 without custom <numFmt>

--- a/crates/formula-xlsx/Cargo.toml
+++ b/crates/formula-xlsx/Cargo.toml
@@ -8,6 +8,7 @@ description = "XLSX/XLSM import/export and package preservation utilities for Fo
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 formula-engine = { path = "../formula-engine" }
+formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 formula-vba = { path = "../formula-vba" }
 quick-xml = { version = "0.37", features = ["serialize"] }
