feat(web): install marketplace extensions with browser-side v2 verification
- Refactor v2 package parsing/canonical JSON into shared core and add a browser verifier (WebCrypto SHA-256 + Ed25519 w/ noble fallback)\n- Add MarketplaceClient + WebExtensionManager to download, verify, store in IndexedDB, and load extensions via blob/data URLs (single-file bundle enforced)\n- Extend BrowserExtensionHost(browser) with unload/update helpers and add vitest + Playwright coverage + docs\n

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@formula/extension-api": "workspace:*",
+    "@formula/extension-host": "workspace:*",
     "@formula/engine": "workspace:*",
     "@formula/grid": "workspace:*",
     "@formula/spreadsheet-frontend": "workspace:*",
