--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@formula/scripting": "workspace:*",
+    "@noble/curves": "^1.4.0",
     "@types/node": "^22.13.4",
     "esbuild": "^0.27.2",
     "fake-indexeddb": "^6.2.5",
