--- a/services/sync-server/package.json
+++ b/services/sync-server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.5.0",
+    "prom-client": "^15.1.3",
     "ws": "^8.18.0",
     "y-websocket": "^2.1.0",
     "yjs": "^13.6.23"
