feat: add xlsb-diff round-trip diff tool + fixture harness
- Add new crates/xlsb-diff crate to diff XLSB packages at OPC part level
  (XML normalized via xlsx-diff; .bin parts compared bytewise with first diff offset)
- Implement XLSB severity policy: calcChain churn downgraded to warnings; docProps info
- Add CLI (xlsb_diff) and tests to ensure formula-xlsb save_as round-trips fixtures
  without critical diffs and patching only touches expected parts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
   "crates/formula-xls",
   "crates/formula-xlsb",
   "crates/formula-xlsx",
+  "crates/xlsb-diff",
   "crates/xlsx-diff",
   "crates/formula-core",
   "crates/formula-wasm",
