feat(api): migrate legacy document_versions envelopes to v2
- Add DB helper + CLI script to upgrade envelope schema v1 rows by re-wrapping DEKs

- Keeps ciphertext/iv/tag unchanged; updates data_envelope_version + data_encrypted_dek JSON

- Document new versions:migrate-legacy script and add regression test

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,6 +12,7 @@
     "keys:rotate": "tsx src/scripts/rotateKeys.ts",
     "secrets:rotate": "tsx src/scripts/secretsRotate.ts",
     "versions:encrypt": "tsx src/scripts/encryptDocumentVersions.ts",
+    "versions:migrate-legacy": "tsx src/scripts/migrateLegacyDocumentVersions.ts",
     "test": "vitest run",
     "test:watch": "vitest"
   },
