feat(formula-io): avoid canonicalizing XLSB built-in numFmtIds on export
- Add formula-format dependency to detect built-in ids/codes
- When converting XLSB→model, use __builtin_numFmtId placeholders for non-canonical built-in ids so XLSX export preserves the original id
- Add regression test that XLSB 1904 date system is propagated

--- a/crates/formula-io/Cargo.toml
+++ b/crates/formula-io/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+formula-format = { path = "../formula-format" }
 formula-model = { path = "../formula-model" }
 formula-xlsx = { path = "../formula-xlsx" }
 formula-xls = { path = "../formula-xls" }
