ci: set CARGO_HOME to default in CI/security workflows
Ensure GitHub Actions jobs that run cargo installs/builds set CARGO_HOME=/root/.cargo so caches are shared across steps. This prevents our repo-local CARGO_HOME defaults from causing redundant downloads in CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+      # Our dev scripts default to a repo-local CARGO_HOME to avoid cross-agent
+      # contention on shared ~/.cargo. In GitHub Actions we prefer the default
+      # CARGO_HOME so cargo installs and builds share the same cache.
+      - name: Use shared Cargo home for CI caching
+        run: echo "CARGO_HOME=$HOME/.cargo" >> "$GITHUB_ENV"
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -66,6 +71,12 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: wasm32-unknown-unknown
+
+      # Our dev scripts default to a repo-local CARGO_HOME to avoid cross-agent
+      # contention on shared ~/.cargo. In GitHub Actions we prefer the default
+      # CARGO_HOME so cargo installs and wasm-pack builds share the same cache.
+      - name: Use shared Cargo home for CI caching
+        run: echo "CARGO_HOME=$HOME/.cargo" >> "$GITHUB_ENV"
 
       - name: Check formula-engine builds for wasm32
         run: cargo check -p formula-engine --target wasm32-unknown-unknown --all-targets
