ci: set CARGO_HOME default in release/excel-compat workflows
Explicitly set CARGO_HOME=/root/.cargo in remaining GitHub Actions workflows so repo-local defaults don't trigger redundant cargo downloads in CI.

--- a/.github/workflows/excel-compat.yml
+++ b/.github/workflows/excel-compat.yml
@@ -66,6 +66,13 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@stable
 
+      # Our dev scripts default to a repo-local CARGO_HOME to avoid cross-agent
+      # contention on shared ~/.cargo. In GitHub Actions we prefer the default
+      # CARGO_HOME so cargo builds share the same cache.
+      - name: Use shared Cargo home for CI caching
+        shell: bash
+        run: echo "CARGO_HOME=$HOME/.cargo" >> "$GITHUB_ENV"
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
